@@ -19,6 +19,7 @@ version <next>:
 - erosion, dilation, deflate and inflate video filters
 - Dynamic Audio Normalizer as dynaudnorm filter
 - Reverse filter
+- Random filter
 
 
 version 2.7:
